<resources>
    <string name="app_name">X-Coin</string>
    <string name="convert">Convert</string>
    <string name="convert_failure">Failed to convert. Please try again.</string>
    <string name="clear_input">Clear</string>
    <string name="copy_result">Copy</string>
    <string name="copy_result_message">Copied %s to clipboard</string>
    <string name="input_amount_hint">The amount to convert</string>
    <string name="input_amount">Input amount</string>
    <string name="currency_converter_message">Enjoy X-Coin </string>
</resources>
