<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".MainActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency_converter_message"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:id="@+id/from_currency"
            android:entries="@array/currencies" />

        <ImageView
            android:id="@+id/reverse_currencies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_media_ff"
            tools:ignore="ContentDescription" />

        <Spinner
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:id="@+id/to_currency"
            android:entries="@array/currencies" />

    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:stretchColumns="1" >

        <TableRow>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/clear_input"
                android:text="@string/clear_input"
                android:gravity="center" />

            <EditText
                android:id="@+id/input_amount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/input_amount_hint"
                android:inputType="numberDecimal"
                tools:ignore="RtlHardcoded" />
            "
        </TableRow>

        <Button
            android:id="@+id/convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/convert" />

        <TableRow >
            <Button
                android:layout_height="wrap_content"
                android:id="@+id/copy_result"
                android:text="@string/copy_result"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/output_amount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:paddingBottom="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry,RtlHardcoded" />

        </TableRow>
    </TableLayout>
</LinearLayout>